<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingLeft="@dimen/padding_small"
	    android:paddingRight="@dimen/padding_small"
	    android:paddingTop="@dimen/padding_xsmall"
	    android:paddingBottom="@dimen/padding_xsmall" >
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/heading_large"
	        android:textStyle="bold"
	        android:fontFamily="sans-serif-condensed"
	        android:text="@string/about_title" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about_about"/>
	
	    <FrameLayout
	        android:layout_width="match_parent"
	        android:layout_height="2dp"
	        android:background="@color/text"
	        android:layout_marginTop="@dimen/padding_small"
	        android:layout_marginBottom="@dimen/padding_small" />
	    
	    <TextView 
	        android:id="@+id/tvAboutLicense"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about_load"/>
	    
	</LinearLayout>
	
</ScrollView>