<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/weight_equal"
            android:background="@color/orange" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical" >

                <TextView
                    style="@style/TimerBigText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/timer_sorry"
                    android:textStyle="italic" />

                <TextView
                    style="@style/TimerBigText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/timer_offline" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_small"
            android:paddingRight="@dimen/padding_small"
            android:paddingTop="@dimen/padding_xsmall" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:text="@string/timer_return"
                android:textSize="@dimen/normal_large"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="@integer/weight_equal"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/TimerMediumText"
                            android:id="@+id/tvTimerDays"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="99" />

                        <TextView
                            style="@style/TimerSmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@string/timer_day" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="@integer/weight_equal"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/TimerMediumText"
                            android:id="@+id/tvTimerHours"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="99" />

                        <TextView
                            style="@style/TimerSmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@string/timer_hour" />
                    </LinearLayout>
                    
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="@integer/weight_equal"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/TimerMediumText"
                            android:id="@+id/tvTimerMinutes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="99" />

                        <TextView
                            style="@style/TimerSmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@string/timer_minute" />
                    </LinearLayout>
                </LinearLayout>
                
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    
</RelativeLayout>